<resources>
    <string name="app_name">Youth go budget</string>
    <string name="title_activity_main">YOUTH GO BUDGET</string>
    <string name="title_activity_budget_form">Budget Form</string>
    <string name="voice">Have a voice in local and central government budget</string>
    <string name="leaders">Show your leaders your budget needs and priorities in Agriculture, Education and Health</string>
    <string-array name="age_category_array">
        <item></item>
        <item>Below 18 years</item>
        <item>18 to 29 years</item>
        <item>30 to 35 years</item>
        <item>Above 35 years</item>
    </string-array>
    <string-array name="region_array">
        <item></item>
        <item>Western</item>
        <item>Northern</item>
        <item>Eastern</item>
        <item>Central</item>
    </string-array>
    <string-array name="district_array">
        <item></item>
        <item>Arua</item>
        <item>Alebtong</item>
        <item>Bulisa</item>
        <item>Gulu</item>
        <item>Kamuli</item>
        <item>Kibaale</item>
        <item>Lira</item>
        <item>Nakasongola</item>
        <item>Oyam</item>
    </string-array>
    <string-array name="sub_county_array">
        <item></item>
        <item>Aleka</item>
        <item>Alebtong</item>
        <item>Aloi</item>
        <item>Apala</item>
        <item>Barr</item>
        <item>Bungatira</item>
        <item>Bugulumbya</item>
        <item>Biso</item>
        <item>Bulisa</item>
        <item>Dadamu</item>
        <item>Kamuli</item>
        <item>Kakoge</item>
        <item>Kagadi Town Council</item>
        <item>Kagadi</item>
        <item>Kigwera</item>
        <item>Kisansya</item>
        <item>Kitoba</item>
        <item>Kyadondo</item>
        <item>Nangabo</item>
        <item>Nabwikulu</item>
        <item>Nawanyago</item>
        <item>Nakasongola</item>
        <item>Malongo</item>
        <item>Oluko</item>
        <item>Ogur</item>
        <item>Omoro</item>
        <item>Oyam town Council</item>
        <item>Otwal</item>
        <item>Patiko</item>
        <item>Wabinyonyi</item>
    </string-array>
    <string-array name="gener_array">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="level_of_education_array">
        <item></item>
        <item>Primary</item>
        <item>O Level</item>
        <item>A Level</item>
        <item>Tertiary</item>
        <item>Diploma</item>
        <item>University</item>
    </string-array>
    <string-array name="boolean_array">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="rating_array">
        <item></item>
        <item>Very bad</item>
        <item>Bad</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Very good</item>
    </string-array>
    <string name="quoter">Quoter</string>
    <string-array name="health_education_service_array">
        <item></item>
        <item>Youth Counseling</item>
        <item>Health education</item>
        <item>Testing and treatment for sexually transmitted infections</item>
        <item>HIV VCT</item>
        <item>Contraceptive information and services</item>
    </string-array>
    <string-array name="education_service_array">
        <item></item>
        <item>School infrastructures i.e. class rooms and toilet facilities etc.</item>
        <item>Quality of school staff i.e. teachers</item>
        <item>Equipped school library and teaching facilities</item>
    </string-array>
    <string-array name="agric_service_array">
        <item></item>
        <item>Seeds</item>
        <item>Pesticides</item>
        <item>Fertilizers</item>
        <item>Advisory services</item>
        <item>Market linkages</item>
        <item>Water for production</item>
        <item>Agricultural mechanization</item>
        <item>Access to Credit and capital</item>
        <item>Agricultural Extension services</item>
        <item>value addition tools at the sub county</item>
        <item>Support to address challenges of climate change</item>
        <item>Capacity building opportunities in various agriculture value chains</item>
    </string-array>
    <string name="quarter">Quarter</string>
    <string name="school_display_budget">3.1) Does the school display budget information for public viewing in any of the following areas? -Please request for institution bank statement as evidence. (Tick where appropriate)</string>
    <string name="title_activity_agric_list">Records</string>
    <string name="show_records">Show records</string>
    <string name="agecategory">Age Category*</string>
    <string name="key_id">Key id</string>
    <string name="region">Region*</string>
    <string name="district">District*</string>
    <string name="subcounty">Sub-county*</string>
    <string name="parish">Parish*</string>
    <string name="phone_id">phone_id</string>
    <string name="staffname">staffName</string>
    <string name="date_recorded">date_recorded</string>
    <string name="agric_service_best">Agric_service_best</string>
    <string name="agric_service_reason">agric_service_reason</string>
    <string name="agric_service_worst">agric_service_worst</string>
    <string name="agric_service_reason_worst">agric_service_reason_worst</string>
    <string name="agric_service_problem">Agric_service_problem</string>
    <string name="agric_service_reason_problem">Agric_service_reason_problem</string>
    <string name="gender">Gender*</string>
    <string name="regions">Region*</string>
    <string name="districts">District*</string>
    <string name="sub_county">Sub-county*</string>
    <string name="_1_in_your_region_district_or_sub_county_which_agricultural_service_has_been_the_best">1. In your region, district or sub county; which agricultural service has been the best?</string>
    <string name="_4_what_do_you_see_as_the_single_biggest_problem_facing_agriculture_in_your_sub_county_district_or_region_which_the_government_needs_to_address">4. What do you see as the single biggest problem facing agriculture in your sub county, district or region which the government needs to address?</string>
    <string name="_5_what_is_your_proposed_priority">5. What is your proposed priority?</string>
    <string name="_4_which_of_the_following_agricultural_services_have_you_used_in_the_last_three_months">4.Which of the following Agricultural services have you used in the last three months?</string>
    <string name="any_other_comments_and_suggestions">Any other comments and suggestions?</string>
    <string name="_3_what_do_you_see_as_the_single_biggest_problem_facing_agriculture_in_your_sub_county_district_or_region_which_the_government_needs_to_address">3. What do you see as the single biggest problem facing agriculture in your sub county, district or region which the government needs to address?</string>
    <string name="age_category">Age category*</string>
    <string name="staff_name">Name of Monitor/YGB3</string>
    <string name="title_activity_front"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_medical_form">Health</string>
    <string name="level_of_education">Level of Education</string>
    <string name="_1_in_your_sub_county_do_the_public_health_facilities_at_all_levels_have_established_and_functional_youth_health_services">1. In your sub county, do the public health facilities at all levels have established any functional youth health services?</string>
    <string name="if_yes_in_your_sub_county_have_you_utilized_the_youth_health_services_at_the_public_health_facilities">2. If yes, in your sub county, have you utilized the youth health services at the public health facilities?</string>
    <string name="reason">Reason</string>
    <string name="if_yes_in_your_sub_county_please_rate_the_functionality_of_the_youth_services_of_your_public_health_facility">3. If yes, in your sub county; please rate the functionality of the youth services of your public health facility</string>
    <string name="in_your_sub_county_which_service_at_your_public_health_facility_would_you_rate_as_the_best">4. In your sub county, which service at your public health facility would you rate as the best?</string>
    <string name="in_your_sub_county_which_service_at_your_public_health_facility_would_you_rate_as_the_worst">5. In your sub county, which service at your public health facility would you rate as the worst?</string>
    <string name="_6_which_services_at_your_public_health_facility_need_to_be_prioritized_to_benefit_the_youth_for_more_budget_allocation_in_2019_2020">6. Which services at your public health facility need to be prioritized to benefit the youth for more budget allocation in 2019/2020?</string>
    <string name="_7_in_your_sub_county_are_there_schools_which_provide_use_or_upe_education">1. In your sub county, are there schools that provide USE or UPE education?</string>
    <string name="_8_in_your_sub_county_which_services_have_been_the_best_in_the_use_and_upe_schools">2. In your sub county, which services have been the best in the USE and UPE schools?</string>
    <string name="_9_in_your_sub_county_which_services_have_been_the_worst_in_the_use_and_upe_schools">3. In your sub county, which services have been the worst in the USE and UPE schools?</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="clearall">Clear all</string>
    <string name="emptystring" />
    <string name="listofservices">List of services</string>
    <string name="title_activity_medical_record">Health Records</string>
    <string name="title_activity_education">Education</string>
    <string name="_10_which_use_and_upe_budget_support_needs_to_be_prioritized_for_more_budget_allocation_in_financial_year_2019_2020">10. Which USE and UPE budget support needs to be prioritized for more budget allocation in financial year 2019/2020?</string>
    <string name="title_activity_education_record">Education Record</string>
    <string name="tusiimesam_gmail_com">tusiimesam@gmail.com</string>
    <string name="youth_go_budget">Youth Go Budget</string>
    <string name="title_activity_budget_monitering">Budget allocation</string>
    <string name="sector">Sector</string>
    <string name="amount_sent">Amount sent</string>
    <string name="amount_spent">Amount spent</string>
    <string name="date_received">Date received</string>
    <string name="date_of_monitoring">Date of monitoring</string>
    <string name="title_activity_budget_monitoring_records">Budget allocation records</string>
    <string name="title_activity_polls">Polls</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="polls">Budget polls</string>
    <string name="synchronise">Synchronise</string>
    <string name="budget_monitoring">Budget Allocation</string>
    <string name="budget">Monitoring</string>
    <string name="poll">Poll</string>
    <string name="data">Data</string>
    <string name="records">Records</string>
    <string name="agriculture">AGRICULTURE</string>
    <string name="form">Form</string>
    <string name="title_activity_poll_answer">Respond to poll</string>
    <string name="title_activity_budget_consutance">Budget Consultation</string>
    <string name="title_activity_local_government">Local government</string>
    <string name="structures">Structures</string>
    <string name="local_government_structure">Local government structure</string>
    <string name="title_activity_budget_life_cycle">Budget Life Cycle</string>
    <string name="budget_life_cycle">Budget life cycle</string>
    <string name="title_activity_education_sector">Education sector</string>
    <string name="save">Save data</string>
</resources>