<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_margin="@dimen/fab_margin"
        card_view:cardCornerRadius="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_id"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/key_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/region"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/district"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subcounty"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/subcounty"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parish"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/parish"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_id"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/phone_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staffname"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/staffName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_recorded"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="210dp"
            android:id="@+id/date_recorded"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agecategory"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/ageCategory"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:maxLines="2"
            android:maxLength="40"
            android:ellipsize="end"
            android:id="@+id/gender"/>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
